chore: added groups, syncing to github
